swagger.json edit for host connections
